--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
   },
   "homepage": "https://github.com/davesag/sequelize-pg-utilities#readme",
   "lint-staged": {
-    "**/*.{js,json}": [
-      "prettier --single-quote --no-semi --write",
-      "git add"
-    ]
+    "linters": {
+      "**/*.{js,json}": [
+        "prettier --single-quote --no-semi --write",
+        "git add"
+      ]
+    }
   },
   "nyc": {
     "check-coverage": true,
