--- a/package.json
+++ b/package.json
@@ -79,17 +79,12 @@
     "lint-staged": "^7.2.2",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
-    "pg": "^7.4.3",
-    "pgtools": "^0.3.0",
     "prettier": "^1.14.0",
     "proxyquire": "^2.0.1",
-    "sequelize": "^4.38.0",
     "sinon": "^6.1.4",
     "sinon-chai": "^3.1.0"
   },
-  "peerDependencies": {
-    "sequelize": "^4.x",
-    "pg": "^7.x",
-    "pgtools": "^0.x"
+  "dependencies": {
+    "pgtools": "^0.3.0"
   }
 }
