--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "An opinionated set of database utilities that manage creating and connecting to a Postgres database",
   "main": "src/index.js",
   "engines": {
-    "node": ">8.12.0"
+    "node": ">= 8.12.0"
   },
+  "files": [
+    "/package*.json",
+    "/CONTRIBUTING.md",
+    "/src"
+  ],
   "directories": {
     "test": "test"
   },
@@ -60,27 +65,27 @@
     "cache": true
   },
   "devDependencies": {
-    "ajv": "^6.5.4",
+    "ajv": "^6.8.1",
     "chai": "^4.2.0",
     "chai-almost": "^1.0.1",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.6.1",
-    "eslint-config-prettier": "^3.1.0",
+    "eslint": "^5.13.0",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-mocha": "^5.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^1.1.1",
-    "lint-staged": "^8.0.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.3",
     "mocha": "^5.2.0",
-    "nyc": "^13.0.1",
-    "prettier": "^1.14.3",
+    "nyc": "^13.2.0",
+    "prettier": "^1.16.4",
     "proxyquire": "^2.1.0",
-    "sinon": "^6.3.5",
-    "sinon-chai": "^3.1.0"
+    "sinon": "^7.2.3",
+    "sinon-chai": "^3.3.0"
   },
   "dependencies": {
     "pgtools": "^0.3.0"
