--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test": "npm run test:unit",
     "test:unit": "NODE_ENV=test mocha ./test/unit/ --require ./test/testHelper.js --recursive",
     "test:unit:cov": "NODE_ENV=test nyc mocha ./test/unit/ --require ./test/testHelper.js --recursive",
-    "test:mutants": "NODE_ENV=test npx stryker run"
+    "test:mutants": "NODE_ENV=test npx stryker run",
+    "snyk-protect": "snyk protect"
   },
   "keywords": [
     "postgres",
@@ -73,7 +74,8 @@
     "prettier": "^2.0.5",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.2",
-    "sinon-chai": "^3.5.0"
+    "sinon-chai": "^3.5.0",
+    "snyk": "^1.360.0"
   },
   "prettier": {
     "semi": false,
@@ -111,5 +113,6 @@
     ],
     "all": true,
     "cache": true
-  }
+  },
+  "snyk": true
 }
