--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
     "url": "https://github.com/davesag/sequelize-pg-utilities/issues"
   },
   "homepage": "https://github.com/davesag/sequelize-pg-utilities#readme",
-  "dependencies": {
-    "pgtools": "^0.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@stryker-mutator/core": "^3.3.1",
     "@stryker-mutator/javascript-mutator": "^3.3.1",
@@ -71,18 +69,23 @@
     "lint-staged": "^10.2.11",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
+    "pg": "^8.3.0",
     "prettier": "^2.0.5",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
     "snyk": "^1.363.0"
   },
+  "peerDependencies": {
+    "pg": ">= 6.4.2"
+  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
     "proseWrap": "never",
     "arrowParens": "avoid",
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "printWidth": 100
   },
   "lint-staged": {
     "**/*.{js,json,md}": [
