--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "npm run test:unit",
     "test:unit": "NODE_ENV=test mocha ./test/unit/ --require ./test/testHelper.js --recursive",
     "test:unit:cov": "NODE_ENV=test nyc mocha ./test/unit/ --require ./test/testHelper.js --recursive",
-    "snyk-protect": "snyk protect"
+    "snyk-protect": "snyk-protect"
   },
   "keywords": [
     "postgres",
@@ -46,6 +46,7 @@
   },
   "homepage": "https://github.com/davesag/sequelize-pg-utilities#readme",
   "devDependencies": {
+    "@snyk/protect": "^1.981.0",
     "ajv": "^8.11.0",
     "chai": "^4.3.6",
     "chai-almost": "^1.0.1",
@@ -66,8 +67,7 @@
     "prettier": "^2.7.1",
     "proxyquire": "^2.1.3",
     "sinon": "^14.0.0",
-    "sinon-chai": "^3.5.0",
-    "snyk": "^1.981.0"
+    "sinon-chai": "^3.5.0"
   },
   "peerDependencies": {
     "pg": ">= 6.4.2"
